tests/invariants/pass/case.act
contract C

constructor()

creates
   uint x := 0

invariants
  x == 0
	
transition bar(uint z)

iff
   CALLVALUE == 0

case z == 0:

updates
  x := z

case 0 < z:

updates
  x := 0