tests/invariants/fail/duplicated_argument_name.act
contract C

constructor(uint _x)

creates

    uint x := _x

invariants

    x == _x

transition f(uint _x)

storage

    x := _x